# Maxau

./: .gitignore  BUILD_GUIDE.md  CODE_COMPLETION_REPORT.md  Cargo.toml  README_JP.md  install-deps.sh  package.json  setup-nodejs.sh  setup.sh
docs/: BUILD_SUCCESS_REPORT.md  FINAL_SUMMARY.md  HOW_TO_RUN.md  RUST2024_SECURITY_REPORT.md  SECURITY_GUIDE.md  TEST_COMPLETE_REPORT.md  WIN32_ISOLATION_CAPABILITIES.md  WIN32_ISOLATION_GUIDE.md  WSL2_AUDIO_ISSUE.md
maxauGui/: package.json  tailwind.config.js  tsconfig.json  vite.config.ts
maxauGui/src/: App.css  App.tsx
maxauGui/src-tauri/: AppxManifest.xml  Cargo.toml  tauri.conf.json
maxauGui/src-tauri/capabilities/: default.json
maxauGui/src-tauri/src/: commands.rs  lib.rs  main.rs
maxauGui/src/components/: LibrarySyncStatus.tsx  LibraryTrackItem.tsx  LibraryTrackSkeleton.tsx  MusicLibrary.tsx  NowPlayingStage.tsx  PlaybackControls.tsx  Seekbar.tsx  StageAlbumArt.tsx  StagePlayerControls.tsx  StageTrackInfo.tsx  UpcomingFlow.tsx  UpcomingTrackCard.tsx  UrlPlayback.tsx  VolumeControl.tsx  index.ts
maxauGui/src/lib/: arrayBufferToUrl.ts  tauriApi.ts  utils.ts
maxauGui/src/stores/: playerStore.ts
maxauGui/src/types/: player.ts
maxauGui/src/utils/: formatSeconds.ts
minauCli/: Cargo.toml
minauCli/src/: main.rs
minauCore/: Cargo.toml
minauCore/src/: display_image.rs  info.rs  input.rs  lib.rs  m3u.rs  macros.rs  play_music.rs  play_url.rs
minauCore/src/player/: info.rs  metadata.rs  play.rs  player_structs.rs
