[workspace]
resolver = "2"
members = [
    "minauCli",
    "maxauGui/src-tauri",
    "minauCore",
]

[workspace.dependencies]
# minauCoreの依存関係（v0.3.0に対応）
anyhow = "1.0.92"
log = "0.4.22"
pretty_env_logger = "0.5.0"
symphonia = { version = "0.5.4", features = ["all"] }
thiserror = "2.0.7"
url = "2.5.4"
cpal = "0.15"
rubato = "0.15"
ringbuf = "0.3"
smol = "2.0.2"
parking_lot = "0.12"
image = "0.25.1"
infer = "0.19.0"
lofty = "0.18.0"
minifb = "0.25.0"
once_cell = "1.19.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
walkdir = "2.5.0"
lazy_static = "1.4.0"
dirs = "5.0.1"
m3u = "1.0.0"
bytes = "1.6.0"
futures-util = "0.3.30"
http-body-util = "0.1.1"
hyper = { version = "1.3.1", features = ["client", "http1", "http2"] }
hyper-tls = "0.6.0"
hyper-util = { version = "0.1.3", features = ["client", "client-legacy", "http1", "http2", "tokio"] }

# minauCliの依存関係
clap = { version = "4.5.48", features = ["derive"] }
async-compat = "0.2"

# maxauGuiの依存関係
tauri = { version = "2.0.0-beta", features = [] }
tauri-plugin-shell = "2.0.0-beta"

# minauCore自体も共有依存関係として定義
minau-core = { path = "./minauCore" }
[profile.release]
opt-level = 3
debug = false
strip = "debuginfo"
panic = "abort"
overflow-checks = false
lto = "fat"
codegen-units = 1
