[package]
name = "minau-cli"
version = "0.3.0"
edition = "2024"
license = "BSD-3-Clause"
authors = ["sirasaki-konoha <konoha@pik6c.tech>"]
description = "A simple, minimal music player"

[dependencies]
minau-core = { path = "../minauCore" }
clap = { version = "4.5.48", features = ["derive"] }
url = "2.5.7"
smol = "2.0.2"
async-compat = "0.2.5"
