[package]
name = "minau-core"
version = "0.1.0"
edition = "2021"
license = "BSD-3-Clause"
authors = ["Nenia-dayo"]
description = "Core library for the Maxau music player"

[dependencies]
bytes = "1.6.0"
crossterm = "0.27.0"
futures-util = "0.3.30"
http-body-util = "0.1.1"
hyper = { version = "1.3.1", features = ["client", "http1", "http2"] }
hyper-tls = "0.6.0"
hyper-util = { version = "0.1.3", features = ["client", "client-legacy", "http1", "http2", "tokio"] }
image = "0.25.1"
infer = "0.19.0"
lofty = "0.18.0"
minifb = "0.25.0"
once_cell = "1.19.0"
rodio = "0.17.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
symphonia = { version = "0.5.4", features = ["mp3", "aac", "flac", "vorbis"] }
tokio = { version = "1.37.0", features = ["full"] }
unicode-width = "0.1.11"
url = "2.5.2"
walkdir = "2.5.0"
lazy_static = "1.4.0"
dirs = "5.0.1"
humantime.workspace = true
indicatif.workspace = true
