[package]
name = "minau-core"
version = "0.3.0"
edition = "2021"
license = "BSD-3-Clause"
authors = ["Nenia-dayo", "sirasaki-konoha <konoha@pik6c.tech>"]
description = "Core library for the Maxau music player"

[dependencies]
bytes = "1.10.1"
crossterm = "0.29.0"
humantime = "2.3.0"
image = "0.25.8"
indicatif = "0.18.0"
lofty = "0.22.4"
minifb = "0.28.0"
once_cell = "1.21.3"
symphonia = { version = "0.5", features = ["all"] }
rubato = "0.15"
cpal = "0.15"
ringbuf = "0.3"
parking_lot = "0.12"
unicode-width = "0.2.1"
hyper = { version = "1.5", features = ["client", "http1", "http2"] }
hyper-util = { version = "0.1", features = ["client", "client-legacy", "http1", "http2"] }
hyper-tls = "0.6"
http-body-util = "0.1"
infer = "0.19.0"
url = "2.5.7"
smol = "2.0.2"
async-channel = "2.5.0"
async-compat = "0.2.5"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
walkdir = "2.5.0"
lazy_static = "1.4.0"
dirs = "5.0.1"
